objects/BB_A__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BB_A</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BB_A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>